--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -50,14 +50,15 @@
                   </li>
                   <li>
                     <a href="#">НАБОР ДЛЯ ПУТЕШЕСТВИЙ &#171 BAXTER OF CALIFORNIA &#187</a>
+                  </li>  
                 </ul>
             </div>
         </div>
         <div class="product-foto">
-          <img class="product-foto-big" src="http://placehold.it/370x350"><br>
-          <img class="product-foto-small" src="http://placehold.it/120x150">
-          <img class="product-foto-small" src="http://placehold.it/120x150">
-          <img class="product-foto-small" src="http://placehold.it/120x150">
+          <img class="product-foto-big" src="http://placehold.it/500x470"><br>
+          <img class="product-foto-small" src="http://placehold.it/150x150">
+          <img class="product-foto-small" src="http://placehold.it/150x150">
+          <img class="product-foto-small" src="http://placehold.it/150x150">
         </div> 
         <section class="product">
           <b>ЕCТЬ В НАЛИЧИИ</b>
@@ -68,7 +69,7 @@
               <a href="#" class="btn product-sale">Купить</a>
             </div>
           <div class="product-complete">
-            <h1>В НАБОР ВХОДЯТ</h1>
+            <b>В НАБОР ВХОДЯТ</b>
             <ul>
               <li>
                 СРЕДСТВО ДЛЯ УМЫВАНИЯ(50 МЛ)
