--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -7,11 +7,9 @@
   <body>  	
   	 <header class="main-header">
   	 	<div class="container">
+        <a href="#" class="main-navigation-logo"><img src="logo.png" alt="Логотип"></a>
   	 		<nav class="main-navigation">
-  	 			<ul>
-  	 				<li>
-  	 					<img src="logo.png" alt="Логотип">
-  	 				</li>
+          <ul>
   	 				<li>
   	 					<a href="#">Информация</a>
   	 				</li>
@@ -35,57 +33,58 @@
         </div>
   	 </header>
     <main class="container">
+      <h1 class="header">НАБОР ДЛЯ ПУТЕШЕСТВИЙ &laquo BAXTER OF CALIFORNIA &raquo</h1>
         <div class="breadcrumbs">
-            <h1 class="breadcrumbs-header">НАБОР ДЛЯ ПУТЕШЕСТВИЙ &#171 BAXTER OF CALIFORNIA &#187</h1>
             <div class="breadcrumbs-nav">
                 <ul>
                   <li>
-                    <a href="#">ГЛАВНАЯ</a>
+                    <a href="#">Главная</a>
                   </li>
                   <li>
-                    <a href="#">МАГАЗИН</a>
+                    <a href="#">Магазин</a>
                   </li>
                   <li>
-                    <a href="#">CРЕДСТВА ДЛЯ УХОДА</a>
+                    <a href="#">Cредства для ухода</a>
                   </li>
                   <li>
-                    <a href="#">НАБОР ДЛЯ ПУТЕШЕСТВИЙ &#171 BAXTER OF CALIFORNIA &#187</a>
+                    <a href="#">Набор для путешествий &laquo BAXTER OF CALIFORNIA &raquo</a>
                   </li>  
                 </ul>
             </div>
         </div>
         <div class="product-foto">
-          <img class="product-foto-big" src="http://placehold.it/500x470"><br>
-          <img class="product-foto-small" src="http://placehold.it/150x150">
-          <img class="product-foto-small" src="http://placehold.it/150x150">
-          <img class="product-foto-small" src="http://placehold.it/150x150">
+          <img class="product-foto-big" src="http://placehold.it/500x470" alt="Фото">
+          <img class="product-foto-small" src="http://placehold.it/150x150" alt="Фото">
+          <img class="product-foto-small" src="http://placehold.it/150x150" alt="Фото">
+          <img class="product-foto-small" src="http://placehold.it/150x150" alt="Фото">
         </div> 
         <section class="product">
-          <b>ЕCТЬ В НАЛИЧИИ</b>
+          <b>Есть в наличии</b>
           <b class="product-articul">Артикул: DEXTER-AE</b>
-          <p class="product-description">TRAVEL KIT - НЕОБХОДИМЫЙ АКССЕСУАР ВО ВРЕМЯ ЛЮБОГО ПУТЕШЕСТВИЯ. В АККУРАТНОЙ КОЖАНОЙ СУМКЕ НАХОДИТЬСЯ ВСЕ, ЧТО НУЖНО ДЛЯ БРИТЬЯ И УХОДА ЗА КОЖЕЙ ВО ВРЕМЯ РАБОЧЕЙ ПОЕЗДКИ ИЛИ ОТДЫХА: СРЕДСТВА ДЛЯ УМЫВАНИЯ, УВЛАЖНЯЮЩИЙ КРЕМ, КРЕМ ДЛЯ БРИТЬЯ, КРЕМ ПОСЛЕ БРИТЬЯ, ШАМПУНЬ, НАБОР ТАКЖЕ МОЖЕТ  СТАТЬ ОТЛИЧНЫМ ПОДАРКОМ.</p>
+          <p class="product-description">TRAVEL KIT - необходимый акссесуар во время любого путешествия. В аккуратной кожаной сумке находиться все, что нужно для бритья и ухода за кожей ов ремя рабочей поездки или отдыха: средства для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь, набор также может стать отличным подарком.</p>
             <div class="product-selling">
               <b class="product-price">2 900 РУБ.</b>
               <a href="#" class="btn product-sale">Купить</a>
             </div>
           <div class="product-complete">
-            <b>В НАБОР ВХОДЯТ</b>
+            <b>В набор входят</b>
             <ul>
               <li>
-                СРЕДСТВО ДЛЯ УМЫВАНИЯ(50 МЛ)
+                Средство для умывания(50 МЛ)
               </li>
               <li>
-                УВЛАЖНЯЮЩИЙ КРЕМ(50 МЛ)
+                Увлажняющий крем(50 МЛ)
               </li>
               <li>
-                КРЕМ ДЛЯ БРИТЬЯ(50 МЛ)
+                Крем для бритья(50 МЛ)
               </li>
               <li>
-                КРЕМ ПОСЛЕ БРИТЬЯ, ШАМПУНЬ(50 МЛ)
+                Крем после бритья, шампунь(50 МЛ)
               </li>
               <li>
-                УДОБНАЯ КОЖАННАЯ КОСМЕТИЧКА(50 МЛ)
-              </li>                                          
+                Удобная кожанная косметичка(50 МЛ)
+              </li>
+            </ul>                                            
           </div>
         </section>     
     </main>
