--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -7,28 +7,25 @@
   <body>  	
   	 <header class="main-header">
   	 	<div class="container">
+        <a href="#" class="main-navigation-logo"><img src="logo.png" alt="Логотип"></a>
   	 		<nav class="main-navigation">
   	 			<ul>
-  	 				<li>
-  	 					<img src="logo.png" alt="Логотип">
-  	 				</li>
   	 				<li>
   	 					<a href="#">Информация</a>
   	 				</li>
   	 				<li>
-                        <a href="#">Новости</a>
-                    </li>
-                    <li>
-                        <a href="#">Прайс-лист</a>
-                    </li>
-                    <li>
-                        <a href="#">Магазин</a>
-                    </li>
-                    <li>
-                        <a href="#">Контакты</a>
-                    </li>
+              <a href="#">Новости</a>
+            </li>
+            <li>
+              <a href="#">Прайс-лист</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
   	 			</ul>
-
   	 		</nav> 		
   	 		<div class="user-block">
   	 			<a href="#" class="login">Вход</a>
@@ -37,86 +34,86 @@
   	 </header>
   	 <main class="container">	
      <div class="breadcrumbs">
-     	<h1 class="breadcrumbs-header">СРЕДСТВА ДЛЯ УХОДА</h1>
+     	<h1 class="breadcrumbs-header">Средства для ухода</h1>
      	<div class="breadcrumbs-nav">
      		<ul>
      			<li>
-     				<a href="#">ГЛАВНАЯ</a>
+     				<a href="#">Главная</a>
      			</li>
      			<li>
-     				<a href="#">МАГАЗИН</a>
+     				<a href="#">Магазин</a>
      			</li>
      			<li>
-     				<a href="#">CРЕДСТВА ДЛЯ УХОДА</a>
+     				<a href="#">Cредства для ухода</a>
      			</li>
      		</ul>
      	</div>
      </div>
-    <div clas="filter">
-    	<h3 class="filter-header">ПРОИЗВОДИТЕЛИ:</h3>
+    <div class="filter">
+    	<b class="filter-header">Производители:</b>
     	<form class="filter-form">
     		<label>
-    		<p><input type="checkbox" name="Baxter of California" value="Baxter of California" checked> BAXTER OF CALIFORNIA</p>
+    		<input type="checkbox" name="Baxter of California" value="Baxter of California" checked> BAXTER OF CALIFORNIA
     		</label>
     		<label>
-    		<p><input type="checkbox" name="Mr-Natty" value="Mr Natty"> MR NATTY</p>
+    		<input type="checkbox" name="Mr-Natty" value="Mr Natty"> MR NATTY
     		</label>
     		<label>
-    		<p><input type="checkbox" name="Suavecito" value="Suavecito" checked> SUAVECITO</p>
+    		<input type="checkbox" name="Suavecito" value="Suavecito" checked> SUAVECITO
     		</label>
     		<label>
-    		<p><input type="checkbox" name="Malin-Goetz" value="Malin-Goetz"> MALIN+GOETZ</p>
+    		<input type="checkbox" name="Malin Goetz" value="Malin Goetz"> MALIN+GOETZ
     		</label>
     		<label>
-    		<p><input type="checkbox" name="Murrays" value="Murrays"> MURRAY'S</p>
+    		<input type="checkbox" name="Murrays" value="Murrays"> MURRAY'S
     		</label>
     		<label>
-    		<p><input type="checkbox" name="american-crew" value="american crew" checked> AMERICAN CREW</p>
+    		<input type="checkbox" name="american crew" value="american crew" checked> AMERICAN CREW
     		</label>
     	</form>
-    	<h3 class="filter-header">ГРУППЫ ТОВАРОВ:</h3>
+    	<b class="filter-header">Группы товаров:</b>
     	<button class="btn filter-see">Показать</button>
     </div>
     <div class="product">
     	<div class="product-сard">
-    	    <img src="http://placehold.it/150x100"><br>
-    	    <b class="product-card-name">Набор для путешевствий &#171 BAXTER OF CALIFORNIA &#187</b><br>
+    	    <img src="http://placehold.it/150x100" alt="Товар"><br>
+    	    <b class="product-card-name">Набор для путешевствий<span class="product-card-manufacture"> &laquoBAXTER OF CALIFORNIA&raquo</span></b>
     	    <b class="product-card-price">2 900 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
-    	    <img src="http://placehold.it/150x100"><br>
-    	    <b class="product-card-name">Увлажняющий кондиционер &#171 BAXTER OF CALIFORNIA &#187</b><br>
+    	    <img src="http://placehold.it/150x100" alt="Товар"><br>
+    	    <b class="product-card-name">Увлажняющий кондиционер<span class="product-card-manufacture"> &laquoBAXTER OF CALIFORNIA&raquo</span></b>
     	    <b class="product-card-price">750 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
-    	    <img src="http://placehold.it/150x100"><br>
-    	    <b class="product-card-name">Гель для волос &#171 SUAVECITO &#187</b><br>
+    	    <img src="http://placehold.it/150x100" alt="Товар"><br>
+    	    <b class="product-card-name">Гель для волос <span class="product-card-manufacture">&laquoSUAVECITO&raquo</span></b>
     	    <b class="product-card-price">290 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
-    	    <img src="http://placehold.it/150x100"><br>
-    	    <b class="product-card-name">Глина для укладки волос &#171 AMERICAN CREW &#187</b><br>
+    	    <img src="http://placehold.it/150x100" alt="Товар"><br>
+    	    <b class="product-card-name">Глина для укладки волос <span class="product-card-manufacture">&laquoAMERICAN CREW&raquo</span></b>
     	    <b class="product-card-price">500 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
-    	    <img src="http://placehold.it/150x100"><br>
-    	    <b class="product-card-name">Гель для волос &#171 AMERICAN CREW &#187</b><br>
+    	    <img src="http://placehold.it/150x100" alt="Товар"><br>
+    	    <b class="product-card-name">Гель для волос <span class="product-card-manufacture">&laquoAMERICAN CREW&raquo</span></b>
     	    <b class="product-card-price">300 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
-    	    <img src="http://placehold.it/150x100"><br>
-    	    <b class="product-card-name">Набор для бритья &#171 BAXTER OF CALIFORNIA &#187</b><br>
+    	    <img src="http://placehold.it/150x100" alt="Товар"><br>
+    	    <b class="product-card-name">Набор для бритья <span class="product-card-manufacture">&laquoBAXTER OF CALIFORNIA&raquo</span></b>
     	    <b class="product-card-price">3 900 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-page">
         	<a href="#" class="btn product-page">1</a>
-        	<a href="#" class="btn product-page">2</a>
+        	<a href="#" class="btn product-page active">2</a>
         	<a href="#" class="btn product-page">3</a>
         	<a href="#" class="btn product-page">4</a>
         </div>
