--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -7,8 +7,8 @@
   <body>  	
   	 <header class="main-header">
   	 	<div class="container">
-        <a href="#" class="main-navigation-logo"><img src="logo.png" alt="Логотип"></a>
   	 		<nav class="main-navigation">
+          <a href="#" class="main-navigation-logo"><img src="logo.png" alt="Логотип"></a>
           <ul>
   	 				<li>
   	 					<a href="#">Информация</a>
@@ -33,9 +33,8 @@
         </div>
   	 </header>
     <main class="container">
-      <h1 class="header">НАБОР ДЛЯ ПУТЕШЕСТВИЙ &laquo BAXTER OF CALIFORNIA &raquo</h1>
+      <h1>Набор для путешествий &laquo;Baxter of california&raquo;</h1>
         <div class="breadcrumbs">
-            <div class="breadcrumbs-nav">
                 <ul>
                   <li>
                     <a href="#">Главная</a>
@@ -47,17 +46,20 @@
                     <a href="#">Cредства для ухода</a>
                   </li>
                   <li>
-                    <a href="#">Набор для путешествий &laquo BAXTER OF CALIFORNIA &raquo</a>
+                    <a href="#">Набор для путешествий &laquo;Baxter of california&raquo;</a>
                   </li>  
                 </ul>
-            </div>
         </div>
-        <div class="product-foto">
-          <img class="product-foto-big" src="http://placehold.it/500x470" alt="Фото">
-          <img class="product-foto-small" src="http://placehold.it/150x150" alt="Фото">
-          <img class="product-foto-small" src="http://placehold.it/150x150" alt="Фото">
-          <img class="product-foto-small" src="http://placehold.it/150x150" alt="Фото">
-        </div> 
+        <figure>
+          <div class="product-foto-big">
+            <a href="#"><img src="http://placehold.it/500x470" alt="Фото"></a>
+          </div>
+          <div class="product-foto-small">
+            <a href="#"><img src="http://placehold.it/150x150" alt="Фото"></a>
+            <a href="#"><img src="http://placehold.it/150x150" alt="Фото"></a>
+            <a href="#"><img src="http://placehold.it/150x150" alt="Фото"></a>
+          </div>
+        </figure> 
         <section class="product">
           <b>Есть в наличии</b>
           <b class="product-articul">Артикул: DEXTER-AE</b>
@@ -67,7 +69,7 @@
               <a href="#" class="btn product-sale">Купить</a>
             </div>
           <div class="product-complete">
-            <b>В набор входят</b>
+            <h3>В набор входят</h3>
             <ul>
               <li>
                 Средство для умывания(50 МЛ)
