--- a/barbershop-shop.html
+++ b/barbershop-shop.html
@@ -7,8 +7,8 @@
   <body>  	
   	 <header class="main-header">
   	 	<div class="container">
-        <a href="#" class="main-navigation-logo"><img src="logo.png" alt="Логотип"></a>
   	 		<nav class="main-navigation">
+          <a href="#" class="main-navigation-logo"><img src="logo.png" alt="Логотип"></a>         
   	 			<ul>
   	 				<li>
   	 					<a href="#">Информация</a>
@@ -34,7 +34,7 @@
   	 </header>
   	 <main class="container">	
      <div class="breadcrumbs">
-     	<h1 class="breadcrumbs-header">Средства для ухода</h1>
+     	<h1>Средства для ухода</h1>
      	<div class="breadcrumbs-nav">
      		<ul>
      			<li>
@@ -50,7 +50,7 @@
      	</div>
      </div>
     <div class="filter">
-    	<b class="filter-header">Производители:</b>
+    	<h3>Производители:</h3>
     	<form class="filter-form">
     		<label>
     		<input type="checkbox" name="Baxter of California" value="Baxter of California" checked> BAXTER OF CALIFORNIA
@@ -71,43 +71,43 @@
     		<input type="checkbox" name="american crew" value="american crew" checked> AMERICAN CREW
     		</label>
     	</form>
-    	<b class="filter-header">Группы товаров:</b>
+    	<h3>Группы товаров:</h3>
     	<button class="btn filter-see">Показать</button>
     </div>
     <div class="product">
     	<div class="product-сard">
     	    <img src="http://placehold.it/150x100" alt="Товар"><br>
-    	    <b class="product-card-name">Набор для путешевствий<span class="product-card-manufacture"> &laquoBAXTER OF CALIFORNIA&raquo</span></b>
+    	    <b class="product-card-name">Набор для путешевствий <span>&laquo;BAXTER OF CALIFORNIA&raquo;</span></b>
     	    <b class="product-card-price">2 900 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
     	    <img src="http://placehold.it/150x100" alt="Товар"><br>
-    	    <b class="product-card-name">Увлажняющий кондиционер<span class="product-card-manufacture"> &laquoBAXTER OF CALIFORNIA&raquo</span></b>
+    	    <b class="product-card-name">Увлажняющий кондиционер <span>&laquo;BAXTER OF CALIFORNIA&raquo;</span></b>
     	    <b class="product-card-price">750 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
     	    <img src="http://placehold.it/150x100" alt="Товар"><br>
-    	    <b class="product-card-name">Гель для волос <span class="product-card-manufacture">&laquoSUAVECITO&raquo</span></b>
+    	    <b class="product-card-name">Гель для волос <span>&laquo;SUAVECITO&raquo;</span></b>
     	    <b class="product-card-price">290 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
     	    <img src="http://placehold.it/150x100" alt="Товар"><br>
-    	    <b class="product-card-name">Глина для укладки волос <span class="product-card-manufacture">&laquoAMERICAN CREW&raquo</span></b>
+    	    <b class="product-card-name">Глина для укладки волос <span>&laquo;AMERICAN CREW&raquo;</span></b>
     	    <b class="product-card-price">500 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
     	    <img src="http://placehold.it/150x100" alt="Товар"><br>
-    	    <b class="product-card-name">Гель для волос <span class="product-card-manufacture">&laquoAMERICAN CREW&raquo</span></b>
+    	    <b class="product-card-name">Гель для волос <span>&laquo;AMERICAN CREW&raquo;</span></b>
     	    <b class="product-card-price">300 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
         <div class="product-сard">
     	    <img src="http://placehold.it/150x100" alt="Товар"><br>
-    	    <b class="product-card-name">Набор для бритья <span class="product-card-manufacture">&laquoBAXTER OF CALIFORNIA&raquo</span></b>
+    	    <b class="product-card-name">Набор для бритья <span>&laquo;BAXTER OF CALIFORNIA&raquo;</span></b>
     	    <b class="product-card-price">3 900 РУБ.</b>
     	    <a href="#" class="btn product-card-sale">Купить</a>
         </div>
