--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -50,7 +50,7 @@
                   </li>  
                 </ul>
         </div>
-        <figure>
+        <figure class="product-foto">
           <div class="product-foto-big">
             <a href="#"><img src="http://placehold.it/500x470" alt="Фото"></a>
           </div>
